# SLM-FT-Inference

./: .env.example  .gitignore  Dockerfile.uv  README.md  pyproject.toml
configs/: accelerate_base.yaml  deepspeed_base.yaml  unsloth_base.yaml
configs/accelerate/: mistral.yaml
configs/deepspeed/: mistral.yaml
configs/inference/: vllm_mistral.yaml
configs/monitoring/: prometheus.yaml
configs/unsloth/: mistral.yaml
data/: download_dataset.py
docs/: PRD.md
inference/: README.md  bench.py
inference/benchmarks/: README.md  config.example.yaml  run_benchmarks.py
inference/benchmarks/runners/: base.py  lmdeploy_runner.py  sglang_runner.py  tensorrt_llm_runner.py  vllm_runner.py
inference/benchmarks/utils/: metrics.py  system.py
inference/frameworks/: lmdeploy.py  sglang.py  tensorrt_llm.py  vllm.py
infra/aks/: README.md  create_or_update.bat  create_or_update.sh  destroy.bat  destroy.sh  main.bicep
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/examples/: aks.hcl
infra/terraform/modules/aks/: main.tf  variables.tf
infra/vm/: README.md  check_status.sh  config.dev.yaml  config.prod.yaml  config.yaml  create_vms.sh  destroy_vms.sh  post_deploy.sh
metrics/: aggregate.py  sampler.py
prompts/: sample_prompts.jsonl
scripts/: bootstrap_env.bat  bootstrap_env.sh  monitor_system.py  run_aks_job.sh  setup_env.sh  submit_vm_job.sh
scripts/monitoring/: export_metrics.py
training/: README.md
training/accelerate/: train.py
training/deepspeed/: ds_config_zero3.json  train.py
training/unsloth/: train.py
training/utils/: config.py  dataset.py  logging_utils.py  metrics.py
