[project]
name = "azure-nc-llm-demo"
version = "0.1.0"
description = "Demo project for fine-tuning and inference benchmarking on Azure NC H100/H200 nodes"
requires-python = ">=3.11"
readme = "README.md"
authors = [
  { name = "Azure NC Demo" }
]
license = { text = "MIT" }
dependencies = [
  "accelerate>=0.33",
  "azure-identity>=1.17",
  "azure-mgmt-containerservice>=31.0.0",
  "azure-mgmt-resource>=23.0.0",
  "bitsandbytes>=0.43",
  "datasets>=3.0",
  "deepspeed>=0.15",
  "evaluate>=0.4",
  "fastapi>=0.112",
  "huggingface-hub>=0.24",
  "jinja2>=3.1",
  "lmdeploy>=0.3.0",
  "mlflow>=2.14",
  "numpy>=1.26",
  "pandas>=2.2",
  "peft>=0.12",
  "plotly>=5.24",
  "prometheus-client>=0.20",
  "psutil>=5.9",
  "nvidia-ml-py>=12.550",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "sglang>=0.2.8",
  "tensorboard>=2.17",
  "tensorrt-llm>=0.10.0",
  "tokenizers>=0.19",
  "torch>=2.4",
  "transformers>=4.45",
  "unsloth>=0.4",
  "uvicorn>=0.30",
  "vllm>=0.4.0"
]

[project.optional-dependencies]
deploy = [
  "azure-cli>=2.63"
]

dynamic = ["scripts"]

[tool.uv]
resolver = "highest"

[tool.uv.sources]
azure-cli = { index = "https://pypi.org/simple" }

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
